--- a/testutil/buf.gen.pulsar.yaml
+++ b/testutil/buf.gen.pulsar.yaml
@@ -11,8 +11,8 @@ managed:
       buf.build/cosmos/cosmos-sdk: cosmossdk.io/api
 plugins:
   - name: go-pulsar
-    out: ../testdata_pulsar
+    out: ./testdata_pulsar
     opt: paths=source_relative
   - name: go-grpc
-    out: ../testdata_pulsar
+    out: ./testdata_pulsar
     opt: paths=source_relative
