--- a/testutil/buf.gen.yaml
+++ b/testutil/buf.gen.yaml
@@ -1,5 +1,5 @@
 version: v1
 plugins:
   - name: gocosmos
-    out: ../..
+    out: ../
     opt: plugins=grpc,Mgoogle/protobuf/any.proto=github.com/cosmos/cosmos-sdk/codec/types
